--- a/src/app/modals/modals.component.html
+++ b/src/app/modals/modals.component.html
@@ -222,7 +222,7 @@
                                                 </form>
                                                 <div class="bottom-area text-center">
                                                     <p>Already have an member ? <a href="#"
-                                                            class="log-btn" (click)="login()">Login</a></p>
+                                                            class="log-btn" >Login</a></p>
                                                 </div>
                                                 <div class="counter-area">
                                                     <div class="single">
